changes to scripts